[UPDATE] filter asset by owner
