# docs/swagger.json
@@ -21,6 +21,53 @@
     },
     "host": "localhost:8085",
     "paths": {
+        "/asset": {
+            "get": {
+                "description": "Get all asset collection of the chain",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "asset"
+                ],
+                "summary": "Get all asset collection of the chain",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Owner Address",
+                        "name": "owner",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ERC721",
+                            "ERC1155",
+                            "ERC20"
+                        ],
+                        "type": "string",
+                        "description": "Asset Type",
+                        "name": "asset_type",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/chain": {
             "get": {
                 "description": "Get all supported chains",
@@ -95,6 +142,18 @@
                         "name": "chain_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page",
+                        "name": "limit",
+                        "in": "query"
                     }
                 ],
                 "responses": {}
@@ -191,6 +250,18 @@
                         "name": "collection_address",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page",
+                        "name": "limit",
+                        "in": "query"
                     },
                     {
                         "type": "string",
